--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,1 +1,6 @@
-<p>search works!</p>
+<div class="container">
+
+    <label>Search</label>
+    <input type="text">
+    <button class="btn btn-outline-success">Search</button>
+</div>
