--- a/src/app/search-display/search-display.component.html
+++ b/src/app/search-display/search-display.component.html
@@ -1,2 +1,2 @@
-<p>{{user.login}}</p>
-<p>{{user.public_repos}}</p>
+<p id="login">{{displayUser.login}}</p>
+<p id="repos">{{displayUser.public_repos}}</p>
